# 모바일에서 햄버거 노출

--- a/src/components/main/order/Order.module.scss
+++ b/src/components/main/order/Order.module.scss
@@ -137,6 +137,9 @@
                                     font-size: $desktop18px;
                                     background-color: $color-777;
                                     color: #fff;
+                                    &.disabled {
+                                        background-color: #f0f0f0;
+                                    }
                                 }
                             }
                         }
