--- a/src/components/assets/MobileHeader.module.scss
+++ b/src/components/assets/MobileHeader.module.scss
@@ -19,9 +19,8 @@
             height: 100%;
             .back {
                 position: absolute;
-                top: 50%; left: 24px;
-                transform: translateY(-50%);
-                width: 24px; height: 24px;
+                left: 12px;
+                width: 40px; height: 40px;
                 font-size: 20px;
                 a, img {
                     display: block;
@@ -31,7 +30,7 @@
                 display: table-cell;
                 text-align: center;
                 vertical-align: middle;
-                font-size: 1.333rem;
+                font-size: $desktop20px;
                 font-weight: 500;
                 color: #222;
             }
