--- a/src/components/main/Aside.module.scss
+++ b/src/components/main/Aside.module.scss
@@ -7,29 +7,23 @@
     background-color: #333;
     float: left;
     box-sizing: border-box;
-    
+    transition: all .3s ease-in-out;
     @include notebook {
-        width: 260px; height: 100%;
-        color: #222;
+        width: 260px;
         position: fixed;
-        background-color: #fff;
-        box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.16);
+        top: 80px; left: 0;
         z-index: 1500;
         transform: translateX(-100%);
-        top: 0; left: 0;
         &.open {
             transform: none;
         }
     }
     @include tablet {
-        width: 260px; height: 100%;
-        color: #222;
+        width: 260px;
         position: fixed;
-        background-color: #fff;
-        box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.16);
+        top: 60px; left: 0;
         z-index: 1500;
         transform: translateX(-100%);
-        top: 0; left: 0;
         &.open {
             transform: none;
         }
@@ -40,11 +34,38 @@
         position: fixed;
         background-color: #fff;
         box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.16);
-        z-index: 1500;
+        z-index: 2500;
         transform: translateX(-100%);
         top: 0; left: 0;
         &.open {
             transform: none;
+        }
+    }
+    .tablet-nav-button {
+        display: none;
+        @include notebook {
+            position: absolute;
+            top: 5px; left: 100%;
+            display: block;
+            width: 48px; height: 48px;
+            background-color: #333;
+            padding: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+        }
+        @include tablet {
+            position: absolute;
+            top: 5px; left: 100%;
+            display: block;
+            width: 48px; height: 48px;
+            background-color: #333;
+            padding: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+        }
+        .hamburger {
+            display: block;
+            width: 100%;
         }
     }
     .content {
@@ -151,9 +172,17 @@
     }
     & + .backdrop {
         display: none;
-        @include mobile {
+        @include notebook {
             display: block;
             z-index: 1000;
+        }
+        @include tablet {
+            display: block;
+            z-index: 1000;
+        }
+        @include mobile {
+            display: block;
+            z-index: 2300;
         }
     }
 }
