--- a/src/components/auth/find/FindItem.module.scss
+++ b/src/components/auth/find/FindItem.module.scss
@@ -21,6 +21,7 @@
             .title {
                 display: table-cell;
                 vertical-align: middle;
+                text-align: center;
                 width: 100%; height: 200px;
                 @include mobile {
                     border: none;
