--- a/src/static/stylesheets/lib/_variables.scss
+++ b/src/static/stylesheets/lib/_variables.scss
@@ -26,6 +26,7 @@ $desktop26px: 2.167rem;
 $desktop28px: 2.333rem;
 $desktop30px: 2.5rem;
 $desktop32px: 2.667rem;
+$desktop34px: 2.833rem;
 
 $color-000: #000;
 $color-222: #222;
