# 배달 매출 현황 퍼블리싱

--- a/src/components/assets/MobileHeader.module.scss
+++ b/src/components/assets/MobileHeader.module.scss
@@ -8,7 +8,7 @@
     width: 100%; height: 40px;
     top: 0;
     background-color: #fff;
-    border-bottom: solid 1px $color-dbdbdb;
+    // border-bottom: solid 1px $color-dbdbdb;
     @include mobile {
         display: block;
     }
