--- a/src/container/main/order/OrderContainer.module.scss
+++ b/src/container/main/order/OrderContainer.module.scss
@@ -2,21 +2,12 @@
 @import '../../../static/stylesheets/lib/variables';
 
 .container {
-    
+    @include container;
     letter-spacing: -0.05em;
-    @include mobile {
-        padding-top: 60px;
-        height: 100%;
-    }
     .tab {
-        @include mobile {
-            position: fixed;
-            top: 40px;
-            width: 100%;
-            background-color: #fff;
-        }
+        @include tab;
     }
     .content {
-        height: 100%;
+        margin-top: 80px;
     }
 }
