--- a/src/static/stylesheets/lib/_mixin.scss
+++ b/src/static/stylesheets/lib/_mixin.scss
@@ -5,21 +5,37 @@
         @content;
     }
 }
-
 @mixin tablet {
     @media (min-width: #{$breakpoint-tablet}) and (max-width: #{$breakpoint-notebook - 1px}) {
         @content;
     }
 }
-
 @mixin notebook {
     @media (min-width: #{$breakpoint-notebook}) and (max-width: #{$breakpoint-desktop - 1px}) {
         @content;
     }
 }
-
 @mixin desktop {
     @media (min-width: #{$breakpoint-desktop}) {
         @content;
+    }
+}
+
+@mixin container {
+    position: relative;
+    padding-top: 40px;
+    @include mobile {
+        padding-top: 60px;
+        height: 100%;
+    }
+}
+
+@mixin tab {
+    @include mobile {
+        position: fixed;
+        top: 40px;
+        width: 100%;
+        z-index: 2000;
+        background-color: #fff;
     }
 }
