--- a/src/static/stylesheets/Root.scss
+++ b/src/static/stylesheets/Root.scss
@@ -27,3 +27,17 @@ a {
     text-decoration: none;
     color: inherit;
 }
+select {
+    /*ios대응*/
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+    /*화살표 배경 넣기*/
+    background: url('../../components/svg/select_arrow.svg') no-repeat
+        95% 50% #fff;
+    /*화살표 select박스 오른쪽 중앙 배치,배경 흰색*/
+}
+select::-ms-expand {
+    display: none; /* 화살표 없애기 for IE10, 11*/
+}
