--- a/src/components/assets/Dialog.module.scss
+++ b/src/components/assets/Dialog.module.scss
@@ -6,7 +6,7 @@
     top: 50%; left: 50%;
     transform: translate(-50%, -50%);
 
-    width: 360px; height: 360px;
+    width: 360px;
     border-radius: 10px;
     overflow: hidden;
     background-color: #fff;
@@ -15,7 +15,7 @@
     visibility: hidden;
 
     @include mobile {
-        width: 302px; height: 254px;
+        width: 302px;
     }
     &.open {
         z-index: 2000;
@@ -24,13 +24,19 @@
     .area {
         width: 100%; height: 100%;
         border: solid 1px #dbdbdb;
+        padding-bottom: 64px;
+        @include mobile {
+            padding-bottom: 54px;
+        }
         .content {
             text-align: center;
-            margin-top: 100px;
+            margin-top: 60px;
+            margin-bottom: 40px;
             padding: 0 20px;
             word-break: keep-all;
             @include mobile {
                 margin-top: 46px;
+                margin-bottom: 30px;
             }
             line-height: 1.5;
             .title {
@@ -38,7 +44,7 @@
                 color: #222;
             }
             .text {
-                margin-top: 40px;
+                margin-top: 30px;
                 font-size: 1.333rem;
                 color: #555;
             }
