--- a/src/components/main/account/AccountInput.module.scss
+++ b/src/components/main/account/AccountInput.module.scss
@@ -63,7 +63,9 @@
                     transition: left 0.15s ease-in-out;
                     box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.16);
                     &.transition {
-                        left: 0;
+                        
+                            left: 0;
+                        
                     }
                 }
                 .header {
@@ -74,12 +76,10 @@
                         width: 100%; height: 40px;
                         line-height: 40px;
                         margin-bottom: 30px;
-                        // border-bottom: solid 1px $color-dbdbdb;
                         .back {
                             position: absolute;
-                            top: 50%; left: 0;
-                            transform: translateY(-50%);
-                            width: 24px; height: 24px;
+                            left: -12px;
+                            width: 40px; height: 40px;
                             font-size: 20px;
                             img {
                                 display: block;
@@ -87,7 +87,7 @@
                         }
                         .mobile-title {
                             text-align: center;
-                            font-size: $desktop16px;
+                            font-size: $desktop20px;
                             font-weight: 500;
                             color: $color-222;
                         }
