--- a/src/components/main/assets/Tabs.module.scss
+++ b/src/components/main/assets/Tabs.module.scss
@@ -1,49 +1,49 @@
 @import '../../../static/stylesheets/lib/mixin';
 @import '../../../static/stylesheets/lib/variables';
 
-.pc{
+.pc {
     @include mobile {
-      display: none;
+        display: none;
     }
 }
 .mobile {
-   display: none;
-    .item{
-        padding : 0 10px !important;
-        border:none !important;
+    display: none;
+    .item {
+        padding: 0 10px !important;
+        border: none !important;
     }
-	@include mobile {
-      display: block;
-	}
+    @include mobile {
+        display: block;
+    }
 }
 .tab {
     width: 100%;
     white-space: nowrap;
-    @include mobile{
-        padding : 0 24px !important;
+    @include mobile {
+        padding: 0 24px !important;
     }
     ul + div {
         border-radius: 30px;
     }
     .item {
-        max-width: 500px;
-        border:1px solid $color-ebebeb;
-        color:#AAA;
-        padding :0 !important;
+        border: 1px solid $color-ebebeb;
+        color: #aaa;
+        padding: 0 !important;
         height: 48px;
         .ca_name {
-            width: 100%; height: 100%;
+            width: 100%;
+            height: 100%;
             font-size: $desktop18px;
-      
+
             @include mobile {
                 font-weight: 500;
             }
         }
     }
 }
-html{
-    body{
-        .ca_name{
+html {
+    body {
+        .ca_name {
             width: 100%;
         }
     }
