--- a/src/container/main/order/OrderDetailContainer.module.scss
+++ b/src/container/main/order/OrderDetailContainer.module.scss
@@ -48,7 +48,7 @@
                     }
 
                     .i-content {
-                        font-size: $desktop16px;
+                        font-size: $desktop14px;
                         @include mobile {
                             font-size: $desktop18px;
                         }
@@ -64,9 +64,12 @@
                             display: inline-block;
                             word-break: keep-all;
                             width: calc(100% - 120px);
+                            @include mobile {
+                                text-align: right;
+                            }
                         }
                         &.deli {
-                            font-size: $desktop14px;
+                            font-size: $desktop16px;
                             @include mobile {
                                 font-size: $desktop18px;
                             }
@@ -137,7 +140,7 @@
             .pay-price {
                 display: inline-block;
                 vertical-align: middle;
-                width: 30%;
+                width: 35%;
                 padding-left: 3%;
                 @include tablet {
                     width: 50%;
@@ -215,7 +218,7 @@
             .pay-action {
                 display: inline-block;
                 vertical-align: middle;
-                width: 35%;
+                width: 30%;
                 @include tablet {
                     width: 100%;
                     margin-top: 20px;
@@ -225,7 +228,7 @@
                     margin-top: 20px;
                 }
                 .button {
-                    width: calc(50% - 5px); height: 70px;
+                    width: 100%; height: 70px;
                     border: solid 1px;
                     font-size: $desktop16px;
                     font-weight: 500;
@@ -236,12 +239,17 @@
                     @include mobile {
                         width: 100%;
                     }
+                    &:hover {
+                        transform: scale(1.05);
+                        border-color: transparent;
+                        box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.15);
+                    }
                 }
                 .reject {
                     color: $color-222;
                     border-color: $color-dbdbdb;
                     @include tablet {
-                        margin-left: 0;
+                        width: calc(50% - 15px);
                     }
                     @include mobile {
                         margin-left: 0;
@@ -249,36 +257,85 @@
                         height: 48px;
                     }
                 }
-                .call {
-                    margin-left: 10px;
+                .direct {
                     color: $desktop-main-color;
                     border-color: $desktop-main-color;
+                    width: calc(50% - 5px);
+                    margin-left: 10px;
                     @include tablet {
-                        margin-top: 0;
-                        margin-left: 18px;
+                        width: calc(33.333% - 10px);
                     }
                     @include mobile {
                         margin-left: 0;
                         margin-top: 10px;
+                        width: 100%;
                         height: 48px;
+                    }
+                }
+                .message {
+                    width: calc(50% - 5px);
+                    border-color: #dbdbdb;
+                    @include tablet {
+                        margin-left: 10px;
+                        width: calc(33.333% - 10px);
+                    }
+                    @include mobile {
+                        width: 100%; height: 48px;
+                        margin-left: 0;
                     }
                 }
                 .receipt {
                     color: #fff;
-                    width: 100%;
                     margin-top: 10px;
                     background-color: $desktop-main-color;
                     border-color: $desktop-main-color;
                     @include tablet {
                         margin-top: 0;
-                        margin-left: 18px;
-                        width: calc(33.333% - 12px);
+                        margin-left: 30px;
+                        width: calc(50% - 15px);
                     }
                     @include mobile {
                         margin-top: 10px;
                         margin-left: 0;
                         height: 48px;
                     }
+                }
+                .call {
+                    color: #fff;
+                    margin-top: 10px;
+                    background-color: $desktop-main-color;
+                    border-color: $desktop-main-color;
+                    @include tablet {
+                        margin-top: 0;
+                        margin-left: 10px;
+                        width: calc(33.333% - 10px);
+                    }
+                    @include mobile {
+                        margin-top: 10px;
+                        margin-left: 0;
+                        height: 48px;
+                    }
+                }
+                .cancel, .o_complete, .d_complete {
+                    color: #A61332;
+                    border-color: #A61332;
+                    font-size: $desktop24px;
+                    height: 140px;
+                    @include tablet {
+                        width: 100%; height: 90px;
+                    }
+                    @include mobile {
+                        height: 48px;
+                        font-size: $desktop18px;
+                    }
+                }
+                .o_complete {
+                    color: $desktop-main-color;
+                    border-color: $desktop-main-color
+                }
+                .d_complete {
+                    color: #ccc;
+                    border-color: #aaa;
                 }
             }
         }
@@ -328,6 +385,9 @@
                 @include mobile {
                     padding: 24px;
                     border: none;
+                }
+                &.overflow {
+                    overflow-y: scroll;
                 }
             }
         }
