--- a/src/pages/Main.module.scss
+++ b/src/pages/Main.module.scss
@@ -28,7 +28,8 @@
                 height: 100vh;
                 overflow-x: hidden;
                 overflow-y: auto;
-                padding: 40px 0;
+                padding: 0;
+                padding-top: 40px;
             }
         }
     }
