--- a/src/container/main/AccountContainer.module.scss
+++ b/src/container/main/AccountContainer.module.scss
@@ -129,6 +129,15 @@
                     }
                 }
             }
+            .timer {
+                font-size: 1.333rem;
+                font-weight: bold;
+                color: #555;
+                position: absolute;
+                top: 50%; right: 148px;
+                transform: translateY(-50%);
+            }
+            
         }
         .address-box {
             display: table;
