--- a/src/container/main/order/OrderContainer.module.scss
+++ b/src/container/main/order/OrderContainer.module.scss
@@ -7,6 +7,7 @@
     .date-icon{
         position: fixed; 
         top: 0; right: 12px; width: 40px; height: 40px;
+        padding: 0;
     }
     .tab {
         @include tab;
