--- a/src/components/assets/SelectBox.module.scss
+++ b/src/components/assets/SelectBox.module.scss
@@ -16,7 +16,9 @@
     }
     @include mobile {
         height: 40px;
-        padding: 0 5%;
+        padding :0;
+        padding-left: 2%;
+        padding-right: 5%;
         color: $color-555;
         & + & {
             margin-left: 16px;
