# 탭 메뉴 적용 및 셀렉트 박스와 NaN 처리

--- a/src/components/assets/SelectBox.module.scss
+++ b/src/components/assets/SelectBox.module.scss
@@ -5,6 +5,7 @@
     border: solid 1px $color-ebebeb;
     height: 48px;
     padding: 0 16px;
+    padding-right: 24px;
     color: $color-222;
     font-size: $desktop16px;
     transition: all .3s ease-in-out;
