# 날짜 선택 완성

--- a/src/components/assets/DatePicker.module.scss
+++ b/src/components/assets/DatePicker.module.scss
@@ -1,7 +1,7 @@
 html {
     body {
         .date-picker {
-            .test {
+            .content {
                 width: 100%;
                 border: 1px solid #ebebeb;
                 border-radius: 10px;
