--- a/src/components/main/Aside.module.scss
+++ b/src/components/main/Aside.module.scss
@@ -85,11 +85,12 @@
                     }
                 }
                 .label {
-                    width: 164px;
+                    display: inline-block;
                     line-height: 24px;
                     font-size: 1.167rem;
                     color: #555;
                     margin-top: 12px;
+                    padding: 0 10px;
                     text-align: center;
                     background-color: #fff;
                     border-radius: 12px;
