--- a/src/container/main/order/OrderContainer.module.scss
+++ b/src/container/main/order/OrderContainer.module.scss
@@ -4,10 +4,15 @@
 .container {
     @include container;
     letter-spacing: -0.05em;
-    .date-icon{
-        position: fixed; 
-        top: 0; right: 12px; width: 40px; height: 40px;
-        padding: 0;
+    .date-icon {
+        display: none;
+        @include mobile {
+            display: block;
+            position: fixed;
+            top: 0; right: 12px;
+            width: 40px; height: 40px;
+            padding: 0;
+        }
     }
     .tab {
         @include tab;
