--- a/src/components/main/assets/Tabs.module.scss
+++ b/src/components/main/assets/Tabs.module.scss
@@ -23,26 +23,28 @@ html {
             max-width: 100%;
             width: 100%;
             flex: 1 1 auto;
+            letter-spacing: -0.05rem;
             font-size: $desktop18px;
+            color: #aaa;
             @include mobile {
                 border: none;
                 background-color: #fff;
                 font-size: $desktop16px;
             }
         }
-    }
-
-    :global(.Mui-selected) {
-        border: 1px solid #dbdbdb;
-        background-color: #f9f9f9;
-        box-sizing: border-box;
-        color: #222;
-        font-weight: bold;
-        @include mobile {
-            border: none;
-            background-color: #fff;
+        :global(.Mui-selected) {
+            border: 1px solid #dbdbdb;
+            background-color: #f9f9f9;
+            box-sizing: border-box;
+            color: #222;
+            font-weight: 500;
+            @include mobile {
+                border: none;
+                background-color: #fff;
+            }
         }
     }
+
 }
 html {
     body {
