--- a/src/components/modal/Reject.module.scss
+++ b/src/components/modal/Reject.module.scss
@@ -1,15 +1,22 @@
-@import '../../../static/stylesheets/lib/mixin';
-@import '../../../static/stylesheets/lib/variables';
+@import '../../static/stylesheets/lib/mixin';
+@import '../../static/stylesheets/lib/variables';
 
 .reject {
     width: 560px;
     position: relative;
     padding-bottom: 96px;
+    @include mobile {
+        width: 100%; height: 100%;
+        background-color: $color-f9f9f9;
+    }
     .header {
         display: table;
-        height: 80px;
+        width: 100%; height: 80px;
         background-color: #333;
-        width: 100%;
+        @include mobile {
+            height: 40px;
+            background-color: #fff;
+        }
         .title {
             display: table-cell;
             vertical-align: middle;
@@ -17,16 +24,43 @@
             padding: 0 40px;
             color: #fff;
             font-weight: bold;
+            @include mobile {
+                text-align: center;
+                color: #222;
+                font-size: $desktop20px;
+                font-weight: 500;
+            }
+        }
+        .m-close {
+            display: none;
+            @include mobile {
+                display: block;
+                position: absolute;
+                left: 12px;
+                width: 40px; height: 40px;
+                font-size: 20px;
+            }
+            a, img {
+                display: block;
+            }
         }
         .close {
             width: 40px; height: 40px;
             position: absolute;
             top: 18px; right: 30px;
+            padding: 0;
+            @include mobile {
+                display: none;
+            }
         }
     }
     .content {
         padding: 40px;
         padding-bottom: 0;
+        @include mobile {
+            padding: 24px;
+            padding-bottom: 0;
+        }
         .c-title {
             font-size: $desktop18px;
             color: $color-222;
