--- a/src/components/modal/Write.module.scss
+++ b/src/components/modal/Write.module.scss
@@ -1,15 +1,22 @@
-@import '../../../static/stylesheets/lib/mixin';
-@import '../../../static/stylesheets/lib/variables';
+@import '../../static/stylesheets/lib/mixin';
+@import '../../static/stylesheets/lib/variables';
 
-.reject {
+.write {
     width: 560px;
     position: relative;
     padding-bottom: 96px;
+    @include mobile {
+        width: 100%; height: 100%;
+        background-color: $color-f9f9f9;
+    }
     .header {
         display: table;
-        height: 80px;
+        width: 100%; height: 80px;
         background-color: #333;
-        width: 100%;
+        @include mobile {
+            height: 40px;
+            background-color: #fff;
+        }
         .title {
             display: table-cell;
             vertical-align: middle;
@@ -17,16 +24,43 @@
             padding: 0 40px;
             color: #fff;
             font-weight: bold;
+            @include mobile {
+                text-align: center;
+                color: #222;
+                font-size: $desktop20px;
+                font-weight: 500;
+            }
+        }
+        .m-close {
+            display: none;
+            @include mobile {
+                display: block;
+                position: absolute;
+                left: 12px;
+                width: 40px; height: 40px;
+                font-size: 20px;
+            }
+            a, img {
+                display: block;
+            }
         }
         .close {
             width: 40px; height: 40px;
             position: absolute;
             top: 18px; right: 30px;
+            padding: 0;
+            @include mobile {
+                display: none;
+            }
         }
     }
     .content {
         padding: 40px;
         padding-bottom: 0;
+        @include mobile {
+            padding: 24px;
+            padding-bottom: 0;
+        }
         .c-title {
             font-size: $desktop18px;
             color: $color-222;
@@ -37,10 +71,15 @@
             width: 100%;
             font-size: $desktop18px;
             margin-top: 10px;
+            @include mobile {
+                border-radius: 10px;
+                background-color: #fff;
+            }
         }
         .c-files {
             width: 100%;
             margin-top: 10px;
+            background-color: #fff;
             .file-list {
                 display: inline-block;
                 vertical-align: middle;
@@ -51,6 +90,10 @@
                 color: $color-555;
                 overflow-x: auto;
                 white-space: nowrap;
+                @include mobile {
+                    border-top-left-radius: 10px;
+                    border-bottom-left-radius: 10px;
+                }
                 .file-item {
                     display: inline-block;
                     vertical-align: middle;
@@ -58,7 +101,7 @@
                     .delete {
                         margin-left: 10px;
                         border: solid 1px $color-dbdbdb;
-                        padding: 4px;
+                        padding: 4px; 
                         img {
                             width: 6px; height: 6px;
                         }
@@ -76,6 +119,11 @@
                 width: 96px; height: 48px;
                 background-color: $color-f9f9f9;
                 border: solid 1px $color-dbdbdb;
+                @include mobile {
+                    border-top-right-radius: 10px;
+                    border-bottom-right-radius: 10px;
+                    background-color: #fff;
+                }
                 .file-setter {
                     display: table;
                     width: 100%; height: 100%;
@@ -110,6 +158,9 @@
         color: #fff;
         font-weight: 500;
         font-size: $desktop18px;
+        @include mobile {
+            position: fixed;
+        }
     }
 }
 
