--- a/src/container/PolicyContainer.module.scss
+++ b/src/container/PolicyContainer.module.scss
@@ -10,6 +10,7 @@
         padding-top: 80px;
         font-size: 1.333rem;
         line-height: 1.8;
+        word-break: keep-all;
         @include notebook {
             padding-top: 60px;
         }
