--- a/src/container/main/support/SupportContainer.module.scss
+++ b/src/container/main/support/SupportContainer.module.scss
@@ -74,7 +74,13 @@
         .write-area {
             text-align: right;
             margin-bottom: 20px;
-            button {
+            @include mobile {
+                position: absolute;
+                bottom: 60px; right: 24px;
+                margin-bottom: 0;
+                z-index: 1500;
+            }
+            .button {
                 width: 80px; height: 40px;
                 border: solid 1px #ccc;
                 font-size: $desktop14px;
@@ -84,6 +90,19 @@
                     transform: scale(1.05);
                     border-color: transparent;
                     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.15);
+                }
+                @include mobile {
+                    display: none;
+                }
+            }
+            .m-button {
+                display: none;
+                transform: scale(0) rotate(359deg);
+                transition: all .5s ease-in-out;
+                box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.15);
+                @include mobile {
+                    display: inline-block;
+                    transform: scale(1) rotate(0deg);
                 }
             }
         }
