--- a/src/container/main/CalculateContainer.module.scss
+++ b/src/container/main/CalculateContainer.module.scss
@@ -10,6 +10,7 @@
             position: fixed;
             top: 0; right: 12px;
             width: 40px; height: 40px;
+            z-index: 2500;
             padding: 0;
         }
     }
