--- a/src/components/auth/ConfirmButton.module.scss
+++ b/src/components/auth/ConfirmButton.module.scss
@@ -5,7 +5,7 @@
     .button {
         width: 100%; height: 64px;
         color: #fff;
-        font-size: 1.5rem;
+        font-size: $desktop18px;
         font-weight: bold;
         background-color: #999;
     
@@ -13,10 +13,10 @@
         transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
         @include mobile {
             position: fixed;
-            left: 0;
-            bottom: 0;
+            left: 0; bottom: 0;
             margin: 0;
             font-weight: 500;
+            height: 60px;
         }
         &.active {
             background-color: $desktop-main-color;
