--- a/src/pages/Error.module.scss
+++ b/src/pages/Error.module.scss
@@ -39,6 +39,13 @@
         color: $mobile-main-color;
         font-size: $desktop22px;
         font-weight: 500;
+
+        transition: all .15s ease-in-out;
+        &:hover {
+            transform: scale(1.03);
+            box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.15);
+            border-color: transparent;
+        }
         @include mobile {
             position: fixed;
             left: 0; bottom: 0;
@@ -49,6 +56,11 @@
             color: #fff;
             margin-top: 0;
             border-radius: 0;
+            &:hover {
+                transform: none;
+                box-shadow: none;
+                border-color: $mobile-main-color;
+            }
         }
     }
 }
