--- a/src/components/main/calculate/Calculate.module.scss
+++ b/src/components/main/calculate/Calculate.module.scss
@@ -99,6 +99,7 @@
             overflow: hidden;
             &.openList {
                 height: 100%;
+                padding-bottom: 20px;
             }
         }
         .item {
