--- a/src/components/assets/DatePicker.module.scss
+++ b/src/components/assets/DatePicker.module.scss
@@ -1,3 +1,6 @@
+@import '../../static/stylesheets/lib/mixin';
+@import '../../static/stylesheets/lib/variables';
+
 html {
     body {
         .date-picker {
@@ -11,6 +14,9 @@ html {
 
                 background: url('../svg/date.svg') no-repeat 90% 50% #fff;
                 background-size: 24px 24px;
+                @include mobile {
+                    padding-left: 10px;
+                }
             }
         }
     }
