--- a/src/components/assets/Message.module.scss
+++ b/src/components/assets/Message.module.scss
@@ -15,6 +15,8 @@
     .text {
         font-size: $desktop16px;
         color: $color-aaa;
+        word-break: keep-all;
+        line-height: 1.5;
         @include mobile {
             color: $color-999;
         }
