--- a/src/components/main/account/AccountInput.module.scss
+++ b/src/components/main/account/AccountInput.module.scss
@@ -16,6 +16,8 @@
         padding-left: 20px;
         @include mobile {
             padding-left: 0;
+            min-width: 100px;
+            max-width: 100px;
             font-size: $desktop16px;
             color: $color-333;
         }
@@ -27,7 +29,6 @@
             display: table;
             .text {
                 display: table-cell;
-                width: 100%;
                 padding: 0 20px;
                 font-weight: 500;
                 font-size: $desktop16px;
@@ -100,7 +101,7 @@
                         position: absolute;
                         left: 0; bottom: 0;
                         width: 100%; height: 60px;
-                        font-size: $desktop16px;
+                        font-size: $desktop18px;
                         color: #fff;
                         font-weight: 500;
                         background-color: $color-999;
