--- a/src/components/main/notice/NoticeList.module.scss
+++ b/src/components/main/notice/NoticeList.module.scss
@@ -1,12 +1,12 @@
 @import '../../../static/stylesheets/lib/mixin';
 @import '../../../static/stylesheets/lib/variables';
 
-
 .notice-list {
     list-style: none;
-    border-top: 1px solid #EBEBEB;
-    border-bottom: 1px solid #EBEBEB;
-    margin: 0; padding: 0;
+    border-top: 1px solid #ebebeb;
+    border-bottom: 1px solid #ebebeb;
+    margin: 0;
+    padding: 0;
 }
 
 .list-element {
@@ -16,24 +16,26 @@
         width: 100%; height: 95px;
         padding: 0 24px;
         display: flex;
-        justify-content:space-between;
+        justify-content: space-between;
         align-items: center;
+        word-break: keep-all;
         .text {
             width: 100%;
             position: relative;
             text-align: left;
+            padding-right: 24px;
 
             .message {
                 color: #222;
-                font-size: 16px;
+                font-size: $desktop16px;
             }
             .at {
                 color: #999;
-                font-size: 12px;
+                font-size: $desktop14px;
             }
-            .delete{
+            .delete {
                 position: absolute;
-                top:50%;
+                top: 50%;
                 right: 0;
                 transform: translateY(-50%);
             }
@@ -43,6 +45,6 @@
         background-color: transparent;
     }
     & + & {
-        border-top: 1px solid #EBEBEB;
+        border-top: 1px solid #ebebeb;
     }
 }
