--- a/src/components/main/order/Order.module.scss
+++ b/src/components/main/order/Order.module.scss
@@ -6,6 +6,7 @@
     position: relative;
     @include mobile {
         padding-top: 0;
+        height: 100%;
     }
     .header {
         display: table;
@@ -30,6 +31,9 @@
         &.empty {
             min-height: 220px;
             height: 100%;
+        }
+        @include mobile {
+            padding-bottom: 20px;
         }
         .item {
             cursor: pointer;
@@ -127,8 +131,12 @@
                                     border-color: $mobile-main-color;
                                     color: $mobile-main-color;
                                     &.order_cancel {
-                                        color: #A61332;
                                         border-color: #A61332;
+                                        color: #A61332;
+                                    }
+                                    &.delivery_complete {
+                                        color: #ccc;
+                                        border-color: #aaa;
                                     }
                                 }
                             }
@@ -250,5 +258,9 @@
     &.order_cancel {
         border-color: #A61332;
         color: #A61332;
+    }
+    &.delivery_complete {
+        color: #ccc;
+        border-color: #aaa;
     }
 }
