--- a/src/container/main/OperationContainer.module.scss
+++ b/src/container/main/OperationContainer.module.scss
@@ -3,7 +3,6 @@
 
 .container {
     @include container;
-    
     @include mobile {
         background-color: $color-f9f9f9;
         &.updateForm {
@@ -31,6 +30,9 @@
         .box-area {
             overflow: visible;
             padding-bottom: 20px;
+            @include mobile {
+                padding-bottom: 80px;
+            }
             .holi-box {
                 display: inline-block;
                 box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -121,7 +123,6 @@
                                 height: 0;
                                 overflow: hidden;
                             }
-                            height: 110px;
                             padding: 10px 0;
                         }
                     }
