--- a/src/components/main/order/Order.module.scss
+++ b/src/components/main/order/Order.module.scss
@@ -34,6 +34,7 @@
         }
         @include mobile {
             padding-bottom: 20px;
+            border-bottom: none;
         }
         .item {
             cursor: pointer;
